--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Your Name - Personal Website</title>
+    <title>Clarisse - Personal Website</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.1/css/bootstrap.min.css">
     <!-- Custom CSS -->
@@ -50,7 +50,7 @@
             <div class="col-lg-12 text-center">
                 <h2 class="section-heading text-uppercase">About Me</h2>
                 <p class="text-muted">
-                    Hello! I'm Your Name, a passionate and creative web developer based in City, Country. I have a
+                    Hello! I'm Clarisse, a passionate and creative web developer based in City, Country. I have a
                     strong foundation in web development technologies and a keen eye for design. My goal is to create
                     innovative and user-friendly websites that leave a lasting impression.
                 </p>
